# endolphine

./: .build.lade.sh  Cargo.toml  README.md  customtheme.toml  install.sh
.github/workflows/: release.yml
.lade/: build.rhai
src/: action.rs  actions.rs  app.rs  args.rs  arguments.rs  builtin.rs  canvas.rs  canvas_cache.rs  canvas_impl.rs  clipboard.rs  color.rs  command.rs  component.rs  config.rs  cursor.rs  error.rs  event.rs  event_handler.rs  event_manager.rs  file_manager.rs  finder.rs  global.rs  handler.rs  hook.rs  initialize.rs  input.rs  key.rs  lib.rs  main.rs  menu.rs  misc.rs  proc.rs  shell.rs  state.rs  theme.rs  thread.rs  tui.rs  ui.rs
src/action/: clip.rs  confirm.rs  manage.rs  menu.rs  move_h.rs  move_v.rs  visual.rs
src/builtin/: bloom.rs  collapse.rs  dark.rs  dark_no_bg.rs  holiday.rs  ice.rs  light.rs  light_no_bg.rs  mars.rs  monochrome.rs  mossy.rs  neon.rs  nept.rs  volcano.rs
src/canvas/: body.rs  footer.rs  header.rs  info_bar.rs  log_area.rs  menu.rs  pwd.rs  sidemenu.rs  state_bar.rs  viewer.rs
src/command/: create_file.rs  delete_file.rs  exit_app.rs  input_handle.rs  mapping.rs  menuctl.rs  mv.rs  paste_file.rs  rename_file.rs  reset_view.rs  search.rs  visual.rs  yank_file.rs
src/component/: app.rs  body.rs  cursor.rs  cursor_cache.rs  event_reader.rs  input.rs  input_handler.rs  key_handler.rs  key_reader.rs  root.rs  selection.rs  sidemenu.rs
src/config/: delete.rs  edit.rs  init.rs  mapping.rs  menu.rs  paste.rs  sort.rs  theme.rs
src/proc/: fs.rs  input.rs  menu.rs  view.rs  yank.rs
src/proc/input/: create.rs  delete.rs  paste.rs  rename.rs  search.rs
src/theme/: bloom.rs  collapse.rs  dark.rs  dark_no_bg.rs  holiday.rs  ice.rs  light.rs  light_no_bg.rs  mars.rs  monochrome.rs  mossy.rs  neon.rs  nept.rs  volcano.rs
src/ui/: dialog.rs  file_rows.rs  header.rs
theme/: bloom.toml  collapse.toml  dark.toml  holiday.toml  ice.toml  light.toml  mars.toml  monochrome.toml  mossy.toml  neon.toml  nept.toml  volcano.toml
